2012-12-24  Sam Weinig  <sam@webkit.org>

        Fix WebKit2 asserting on launch.

        * WebProcess/WebProcess.cpp:
        (WebKit::WebProcess::WebProcess):
        * WebProcess/WebProcess.h:
        (WebKit::WebProcess::databaseManager):
        (WebProcess):

2012-12-24  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt][Win] Unreviewed Xmas buildfix after r138433.

        * WebProcess/Cookies/WebCookieManager.h:

2012-12-23  Seokju Kwon  <seokju.kwon@gmail.com>

        Fix the incorrect use of preprocessor statement in API header
        https://bugs.webkit.org/show_bug.cgi?id=105675

        Reviewed by Sam Weinig.

        Remove a preprocessor statement in WKBundlePage.h

        * WebProcess/InjectedBundle/API/c/WKBundlePage.cpp:
        (WKBundlePageGetInspector):
        * WebProcess/InjectedBundle/API/c/WKBundlePage.h:

2012-12-23  Sam Weinig  <sam@webkit.org>

        Switch WebCookieManager and AuthenticationManager to use the ChildProcess rather than holding on to a Connection
        https://bugs.webkit.org/show_bug.cgi?id=105703

        Reviewed by Dan Bernstein.

        Also switches WebCookieManager over to be a MessageReceiver while we are at it.

        * NetworkProcess/NetworkProcess.cpp:
        (WebKit::NetworkProcess::NetworkProcess):
        (WebKit::NetworkProcess::initialize):
        (WebKit::NetworkProcess::didReceiveMessage):
        * NetworkProcess/NetworkProcess.h:
        (WebKit):
        * WebProcess/Authentication/AuthenticationManager.cpp:
        (WebKit::AuthenticationManager::AuthenticationManager):
        (WebKit::AuthenticationManager::didReceiveAuthenticationChallenge):
        * WebProcess/Authentication/AuthenticationManager.h:
        (AuthenticationManager):
        * WebProcess/Cookies/WebCookieManager.cpp:
        (WebKit):
        (WebKit::WebCookieManager::WebCookieManager):
        (WebKit::WebCookieManager::didReceiveMessage):
        (WebKit::WebCookieManager::getHostnamesWithCookies):